<resources>
    <string name="app_name">Test_Task</string>
    <string name="no_internet_available">No internet connection! Please check your internet connectivity.</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_alarms_set">No Alarms Set</string>
    <string name="alarm_title">Alarm Title</string>
    <string name="alarm">Alarm</string>
    <string name="snoozed_alarm">Snoozed Alarm</string>
    <string name="settings">Settings</string>
    <string name="alarm_for">Alarm for</string>
    <string name="disabled">Disabled</string>
    <string name="alarm_set_for">Alarm Set for</string>
    <string name="alarm_deleted">Alarm Deleted</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_removed">Alarm Removed</string>
    <string name="notification_channel_description">Notifications From Alarmzy</string>
    <string name="snoozing_till">Snoozing till</string>
    <string name="missed_alarm">Missed Alarm</string>

    <string name="do_nothing">Do nothing</string>
    <string name="mute">Mute</string>
    <string name="snooze">Snooze</string>
    <string name="when_volume_button_is_pressed">when volume button is pressed</string>
    <string name="when_power_button_is_pressed">when power button is pressed</string>
    <string name="less_than_a_minute_from_now">less than a minute from now</string>
    <string name="minutes_from_now">minutes from now</string>
    <string name="hours_and">hours and</string>

    <string name="fetching_weather_at_your_location">Fetching weather at your location</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="location_updated">Location updated</string>
    <string name="please_enable_Google_location_services">Please enable Google location services</string>
    <string name="enable">Enable</string>
    <string name="location_access_required_for_weather">Location access required for weather</string>
    <string name="allow">Allow</string>

    <!-- Days - for selecting repeating alarm day-->
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="sun">S</string>

    <!-- Settings preference start -->

    <!-- Shown in settings - snooze timeout-->
    <string name="snooze_summary">Select timeout for snooze</string>
    <string name="snooze_title">Snooze Time</string>
    <string-array name="snooze_length_entries">
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>25 Minutes</item>
        <item>30 Minutes</item>
    </string-array>
    <string-array name="snooze_length_values" translatable="false">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <!-- Shown in settings - silence timeout-->
    <string name="silence_summary">Silence alarm after (minutes)</string>
    <string name="silence_title">Silence Timeout</string>
    <string-array name="silence_timeout_entries">
        <item>Never</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
    </string-array>
    <string-array name="silence_timeout_values" translatable="false">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <!-- Shown in settings - crescendo time-->
    <string name="crescendo_summary">Alarm volume will increase slowly</string>
    <string name="crescendo_title">Gradually increase volume</string>
    <string-array name="crescendo_entries">
        <item>Off</item>
        <item>5 Seconds</item>
        <item>10 Seconds</item>
        <item>15 Seconds</item>
        <item>20 Seconds</item>
        <item>30 Seconds</item>
        <item>40 Seconds</item>
        <item>50 Seconds</item>
        <item>60 Seconds</item>
    </string-array>
    <string-array name="crescendo_values" translatable="false">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <!-- Shown in settings - buttons-->
    <string name="buttons_summary">Select what buttons do</string>
    <string name="buttons_title">Buttons</string>
    <string-array name="button_action_entries">
        <item>Do Nothing</item>
        <item>Mute</item>
        <item>Dismiss</item>
        <item>Snooze</item>
    </string-array>
    <string-array name="button_action_values" translatable="false">
        <item>com.pk.alarmzy.DO_NOTHING</item>
        <item>com.pk.alarmzy.MUTE</item>
        <item>com.pk.alarmzy.DISMISS</item>
        <item>com.pk.alarmzy.SNOOZE</item>
    </string-array>

    <!-- Shown in settings - weather -->
    <string name="weather_summary">Show weather information with alarm</string>
    <string name="weather_summary_on">Show weather when alarm rings</string>
    <string name="weather_summary_off">Hide weather</string>
    <string name="weather_title">Weather</string>
    <string name="weather_temperature_unit">Temperature unit</string>
    <string-array name="weather_unit_entries">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="weather_unit_values" translatable="false">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!-- Shown in settings - miscellaneous options-->
    <string name="ringtone_summary">Select the default alarm ring sound</string>
    <string name="ringtone_title">Choose ringtone</string>
    <string name="vibrate_summary">Vibrate with alarm</string>
    <string name="vibrate_title">Enable vibration</string>
    <string name="rating_summary">Leave a rating on Google Play</string>
    <string name="rating_title">Rate Alarmzy</string>
    <string name="volume_button">Volume button</string>
    <string name="power_button">Power button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_new_alarm">Set New Alarm</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="good_morning">Good Morning</string>
    <string name="sound">Sound</string>
    <string name="default_time_text">Default</string>
    <string name="save">SAVE</string>
    <string name="home_Screen">Home Screen</string>
    <string name="add_new_Alarm">Add New Alarm</string>

    <!-- Settings preference end -->
</resources>