<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/menu_bg_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/set_new_alarm"
            app:titleCentered="true" />

        <TextView
            android:id="@+id/item_alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="00:00"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/am_pm_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_alarm_time">

            <TextView
                android:id="@+id/am_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="AM"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

            <View
                android:layout_width="@dimen/_2sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/unselected_ap_pm_color"/>

            <TextView
                android:id="@+id/pm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="PM"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/unselected_ap_pm_color"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/alarm_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/unselected_ap_pm_color"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/am_pm_layout" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/alarmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/good_morning"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/unselected_ap_pm_color"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/am_pm_layoust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmName">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="@dimen/_16sdp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="@string/default_time_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/unselected_ap_pm_color"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/save"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            app:backgroundTint="@color/alarm_save_btn_bg_color"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/am_pm_layoust" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>